tribe/tribe-apps-manifests/maykol-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-ref-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      app: rollout-ref-deployment
  template:
    metadata:
      labels:
        app: rollout-ref-deployment
        version: v1
    spec:
      containers:
        - name: rollouts-demo
          #image: argoproj/rollouts-demo:blue
          #image: argoproj/rollouts-demo:red
          #image: argoproj/rollouts-demo:yellow
          # image: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:maykol-blue
          image: 142401413602.dkr.ecr.sa-east-1.amazonaws.com/ecr-flask-api-example:maykol-red
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080        
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080        
            initialDelaySeconds: 20  
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 150Mi
