tribe/tribe-apps-manifests/maykol-api/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-ref-deployment
spec:
  replicas: 4
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: rollout-ref-deployment
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 60
        - setWeight: 40
        - pause:
            duration: 60
        - setWeight: 60
        - pause:
            duration: 60
        - setWeight: 80
        - pause:
            duration: 60
