tribe/tribe-apps-manifests/maykol-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: maykol-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
spec:
  selector:
    app: maykol-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
